# asurada-desperated

./: .gitignore  Cargo.toml  Makefile  build.sh  podman_bootstrap.sh  rust-toolchain.toml
.devcontainer/: devcontainer.json
bootloader/: Cargo.toml  Makefile  rust-toolchain.toml
bootloader/.cargo/: config.toml
bootloader/mk/: aarch64-unknown-uefi.mk
bootloader/src/: logger.rs  main.rs
bootloader/src/os/: mod.rs
bootloader/src/os/uefi/: alloc.rs  boot.rs  config.rs  dtb.rs  guid.rs  io.rs  macros.rs  memory.rs  mod.rs  prelude.rs  reset.rs  runtime.rs  status.rs  system.rs  text.rs  time.rs
bootloader/src/os/uefi/arch/: aarch64.rs  mod.rs
bootloader/src/os/uefi/rt/: panic.rs  start.rs
bootloader/targets/: aarch64-unknown-uefi.json
installer/: Cargo.toml  test.sh
installer/config/: default.toml
installer/src/: disk_wrapper.rs  lib.rs
installer/src/config/: file.rs  general.rs  mod.rs  package.rs  user.rs
kernel/: Cargo.toml  Makefile  build.rs  config.toml
kernel/.cargo/: config.toml
kernel/linkers/: aarch64.ld
kernel/src/: cpu_set.rs  elf.rs  log.rs  main.rs  panic.rs  percpu.rs
kernel/src/allocator/: linked_list.rs  mod.rs
kernel/src/allocator/mm/: mod.rs
kernel/src/allocator/mm/arch/: aarch64.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: consts.rs  debug.rs  macros.rs  misc.rs  mod.rs  start.rs
kernel/src/devices/: mod.rs
kernel/src/devices/graphical_debug/: debug.rs  display.rs  mod.rs
kernel/src/memory/: kernel_mapper.rs  mod.rs
kernel/targets/: aarch64-unknown-kernel.json  aarch64-unknown-none.json
(+39 files in other folders)
