[package]
name = "asurada_bootloader"
version = "0.1.0"
edition = "2024"


# UEFT uses bin target
[[bin]]
name = "bootloader"
path = "src/main.rs"

# BIOS uses lib target
[lib]
name = "bootloader"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]

[target."aarch64-unkonwn-uefi".dependencies]
dmidecode = "0.8.5"

[target.'cfg(any(target_arch = "aarch64"))'.dependencies]
byteorder = { version = "1.5.0", default-features = false }
fdt = "0.1.5"